# Culex_tarsalis_and_WNV_prediction

./: README.md
WNV_Project/: elwnv.py
WNV_Project/API_for_climate_data/: request_hourly_climate_data.py
WNV_Project/CDC_files/: GLMM_CA_binary.py  GLMM_binary.py  GLMM_count.py  Kendall_test_national.py  LMM_nation_count.py  PCA.py  adding_binary_target.py  adding_centroid_coor.py  landcover.ipynb  (+19 more)
population_genetics/: README.md  add_curly_brace_label.py  check_non_candidate_snps.py  check_snps_within_genes.py  extract_climate_data.py  extract_land_use.py  extract_sift_result.py  find_sample_snp_match_common_gene.py  get_annual_climate.py  heatmap_RDA_CANDIDATE_SNPS_with_gene_annotation.py  heatmap_plots_RDA_candidate_snps_correlation_with_env.py  heatmap_plots_RDA_candidate_snps_correlation_with_env_order_by_snp.py  look_up_candidates_gene.py  look_up_candidates_gene_sift.py  modify_fasta_file.py  overlapping_gene_snp_sift_info.py  overlapping_snps_and_sift_prediction.py  prepare_k_pop_group.py  prepare_matrix_for_PCoA.py  process_file_for_annotation_forge.py  put_IBD_IBE_plot_together.py  put_fig_together.py  pyproject.toml  read_effsnp_file.py  stack_bar_plot_admixture.py  summarize_and_plot_sift_results.py  upset_plot_common_genes.py  within_interesting_genes_alt_allele_freq_distribution_plot.py
population_genetics/Posters/: ASMS_2022_Eric_version_8.pptx  CHEM_101_2022_Eric-1.pptx
proposal_defense/: create_video_for_wnv_case_over_years.py  draw_pie_plot.py  generate_mass_spectra_plot.py  plot_human_yearly_distribution.py  plot_non_human_yearly_distribution.py
(+185 files in other folders)
